--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
                         on this website?</div>
                     <div class="collapse-content text-base font-normal text-[#62748E]">You can start learning English by
                         chatting with me! Here are some ways I can help you:
-
+                        <br>
                         Conversational Practice – You can chat with me in English, and I'll help correct your mistakes.
-
+                        <br>
                         Grammar & Vocabulary – Ask me to explain grammar rules or suggest new words.
-
+                        <br>
                         Reading & Writing – Share a paragraph, and I’ll help improve it.
-
+                        <br>
                         Pronunciation Help – I can guide you on pronunciation tips and phonetics.
-
+                        <br>
                         Quizzes & Exercises – I can create fun quizzes and practice exercises.
                     </div>
                 </div>
@@ -198,45 +198,46 @@
                     <div class="collapse-content text-base font-normal text-[#62748E]">
                         Building your English vocabulary takes regular practice! Here are some effective ways to
                         improve:
-
+                        <br>
                         📖 Read Daily
                         Read books, articles, and blogs in English.
-
+                        <br>
                         Start with simple stories and move to advanced content.
-
+                        <br>
                         Use apps like BBC Learning English, Newsela, or The Guardian.
-
+                        <br>
                         🎧 Listen to English
                         Watch English movies, TV shows, and YouTube videos.
-
+                        <br>
                         Listen to English podcasts or audiobooks.
-
+                        <br>
                         Try songs with lyrics to learn new words.
-
+                        <br>
                         ✍️ Write & Use New Words
                         Keep a vocabulary journal.
-
+                        <br>
                         Write daily sentences or a short diary entry.
-
+                        <br>
                         Try making flashcards (apps like Anki or Quizlet help).
-
+                        <br>
                         🗣️ Practice Speaking
                         Use new words in daily conversations.
-
+                        <br>
                         Talk to yourself in English or find a speaking partner.
-
+                        <br>
                         Try tongue twisters to improve pronunciation.
-
+                        <br>
                         🎮 Play Vocabulary Games
                         Try word games like Scrabble, Wordle, or crossword puzzles.
-
+                        <br>
                         Use language-learning apps like Duolingo, Memrise, or Quizlet.
                     </div>
                 </div>
 
                 <div class="collapse collapse-plus bg-[#F8F8F8] border border-base-300">
                     <input type="radio" name="my-accordion-3" />
-                    <div class="collapse-title font-medium text-base text-[#18181B]">5. Do you offer certificates for completed courses?
+                    <div class="collapse-title font-medium text-base text-[#18181B]">5. Do you offer certificates for
+                        completed courses?
                     </div>
                     <div class="collapse-content text-base font-normal text-[#62748E]">No.</div>
                 </div>
